--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/Norkart/SLD_to_MapboxGL#readme",
   "dependencies": {
+    "node": "^13.6.0",
     "underscore": "^1.8.3",
     "xml2js": "^0.4.17"
   }
